--- a/src/components/CardsComponent/Cards.module.css
+++ b/src/components/CardsComponent/Cards.module.css
@@ -1,12 +1,13 @@
 .cardList {
     gap: 1em;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
+    flex-direction: row-reverse;
     width: 100%;
     /* height: 100%; */
     justify-content: space-around;
     /* align-content: space-around; */
-    margin: 10px 0;
+    margin: 30px 0;
     margin-top: 60px;
-    padding: 20px 0;
+    padding: 15px ;
 }
